# OpenGL-test

./: CMakeLists.txt  build_Debug.bat  build_Release.bat
src/: CMakeLists.txt  RectangleShape.cpp  RectangleShape.h  Shader.cpp  Shader.h  main.cpp
src/legacy/: legacy.hpp
src/shaders/: fragment1.hlsl  fragment2.hlsl  fragmentMulticolored.hlsl  vertex.hlsl
